package behavioral.stratery.btCC3;

public interface KhuyenMaiStratery {
    double tinhTienKhuyenMai(double tongTien);
}
