package behavioral.stratery.btCC3;

public class MastercardStratery implements ThanhToanStratery{
    @Override
    public double thanhToan(double tongTien) {
        return tongTien;
    }
}
