package behavioral.stratery.btCC3;

public interface ThanhToanStratery {
    double thanhToan(double tongTien);
}
